--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,18 @@
-.App {
-  text-align: center;
+.app {
+  margin: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.nav {
+  padding-bottom: 10px;
+  border-bottom: 2px solid darkblue
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.nav span {
+  font-size: 26px;
+  padding-right: 20px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.board {
+  padding-top: 20px;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
