--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  margin: 10px;
+  margin: 20px;
 }
 
 .nav {
@@ -18,3 +18,39 @@
   padding-top: 20px;
 }
 
+
+
+.item {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 20px;
+  margin: 10px 20px 20px 0
+}
+
+.item-image {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.item-info {
+  flex: 10
+}
+
+
+.item span {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.item-price {
+  flex: 1;
+}
+
+.items button {
+  border: 2px solid orange;
+  border-radius: 5px;
+  height: 30px;
+  width: 100px;
+  font-size: 14px;
+}
