--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@
   color: darkgray;
 }
 
-.nav span.selected {
- border-bottom: 3px solid orange
-}
-
 .board {
   display: flex;
   flex-direction: column;
@@ -54,6 +50,7 @@
 .item-price > div {
   padding-top: 5px;
 }
+
 .items button {
   border: 2px solid orange;
   border-radius: 5px;
@@ -69,14 +66,15 @@
 }
 
 .cart-button span {
-  font-size: 22px;
+  font-size: 18px;
+  padding-top: 4px;
   text-align: center;
-  width: 30px;
-  height: 30px;
+  width: 32px;
+  height: 28px;
   border: 1px solid lightgray;
 }
 
 .cart-button button {
-  width: 25px;
-  height: 25px;
+  width: 28px;
+  height: 28px;
 }
