--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,72 @@
-.app {
+body {
   margin: 20px;
-}
-
-.nav {
-  padding-bottom: 10px;
-  border-bottom: 2px solid darkblue;
-}
-
-.nav a {
-  text-decoration: none;
-  font-size: 26px;
-  padding-right: 20px
-}
-
-.nav a:hover {
-  color: darkgray;
-}
-
-.nav span.selected {
-  border-bottom: 4px solid orange
-}
-.cart-status a {
   font-size: 18px;
-  color: gray;
-  float: right;
 }
 
-.board {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
+.nav span {
+  font-size: 30px;
+  margin: 30px;
+}
+
+.nav span:hover {
+  color: gray;
+  cursor: pointer;
 }
 
 .item {
   display: flex;
-  align-items: center;
-  border-bottom: 1px solid lightgray;
-  padding-bottom: 20px;
-  margin: 10px 20px 20px 0
+  margin: 20px;
 }
 
 .item-image {
-  margin-right: 20px;
+  width: 80px;
+  height: 80px;
+  margin-right: 30px;
 }
 
-.item-info {
-  flex: 1
+.description {
+  flex: 2;
 }
 
-.item span {
-  display: block;
+.description div {
+  margin-top: 10px;
+}
+
+.price {
+  flex: 1;
+  font-size: 20px;
+}
+
+.price div {
   margin-bottom: 10px;
 }
-
-.item-price {
+.count-control {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end
-}
-
-.item-price > div {
-  padding-top: 5px;
-}
-
-.items button {
-  border: 2px solid orange;
-  border-radius: 5px;
-  height: 30px;
-  width: 100px;
-  font-size: 14px;
-}
-
-.cart-button {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-
-.cart-button span {
   font-size: 18px;
-  padding-top: 4px;
-  text-align: center;
-  width: 32px;
+}
+
+.count-control button:hover {
+  color: gray;
+  cursor: pointer;
+}
+
+.count-control div {
+  width: 28px;
+  height: 28px;
+  border: 1px solid lightgray;
+  text-align: center
+}
+
+.count-control button {
+  width: 28px;
   height: 28px;
   border: 1px solid lightgray;
 }
 
-.cart-button button {
-  width: 28px;
-  height: 28px;
+.items-board button {
+  font-size: 18px;
 }
 
-.total-cost {
-  font-size: 24px;
-  position: absolute;
-  right: 40px;
-}
-
-.empty-message {
-  font-size: 30px;
-  color: darkgray;
-  text-align: center;
-  padding-top: 10px;
+.selected {
+  border-bottom: 5px solid orange
 }
